--- a/task_2/landing2/index.html
+++ b/task_2/landing2/index.html
@@ -80,6 +80,7 @@
                   สุขภาพ
                </li>
                <li>
+                  <div></div>
                   ความงาม
                </li>
                <li>
