--- a/task_2/landing2/index.html
+++ b/task_2/landing2/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="assets/img/movinix.png">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/form.css">
-    <script src="assets/js/date.js"></script>
+    <script async src="assets/js/date.js"></script>
     <!-- INTH_SNIPPET_TOP -->
     <script defer src="/task_2/landing2/script.js"></script>
 <script>
